--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/uuid": "^10.0.0",
     "bcryptjs": "^3.0.3",
+    "html2pdf.js": "^0.14.0",
     "mongoose": "^9.1.5",
     "next": "16.1.6",
     "next-auth": "^5.0.0-beta.30",
