--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/uuid": "^10.0.0",
     "bcryptjs": "^3.0.3",
     "html2pdf.js": "^0.14.0",
+    "lucide-react": "^0.563.0",
     "mammoth": "^1.11.0",
     "mongoose": "^9.1.5",
     "next": "16.1.6",
