--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,11 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Debug and troubleshooting files (may contain sensitive data)
+*_FIX*.md
+*_DEBUG*.md
+*_OAUTH*.md
+*_STEPS*.md
+*_ACTION*.md
+*_ISSUE*.md
