--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/uuid": "^10.0.0",
     "bcryptjs": "^3.0.3",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.34.2",
     "html2pdf.js": "^0.14.0",
     "lucide-react": "^0.563.0",
     "mammoth": "^1.11.0",
