--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@types/nodemailer": "^7.0.9",
     "@types/uuid": "^10.0.0",
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^2.9.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.34.2",
     "html2pdf.js": "^0.14.0",
     "lucide-react": "^0.563.0",
     "mammoth": "^1.11.0",
     "mongoose": "^9.1.5",
+    "multer": "^2.0.2",
     "next": "16.1.6",
     "next-auth": "^5.0.0-beta.30",
     "nodemailer": "^8.0.1",
